#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(lsass, 5.0.0, support@likewisesoftware.com)
AC_CANONICAL_TARGET
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_CONFIG_HEADERS([include/config.h])

AM_CPPFLAGS=""
AM_CFLAGS=""
AM_LDFLAGS=""

PKG_VERSION="5.0.0"

# Platform-specific stuff

MOD_EXT=".so"

CF_FRAMEWORK_LDFLAGS=""
SC_FRAMEWORK_LDFLAGS=""

AC_DEFINE(__LW_MOTD_FILE__, "/etc/motd", [File which contains the message of the day])
AC_DEFINE(__LW_MOTD_MAX_SIZE__, 4096, [The maximum number of bytes which will be displayed from the MOTD])

AC_USE_SYSTEM_EXTENSIONS

case "$host_os:$host_cpu" in
	linux*:i?86)
		nss_libdir="/lib"
		pam_libdir="/lib/security"
		NSS_SUBDIR="linux"
                ENABLE_NSS_ENUM_DEFAULT="no"
		AC_DEFINE([__LWI_LINUX__], [], [Define if OS is Linux])
		;;
	linux*:x86_64)
		nss_libdir="/lib64"
		pam_libdir="/lib64/security"
		NSS_SUBDIR="linux"
                ENABLE_NSS_ENUM_DEFAULT="no"
		AC_DEFINE([__LWI_LINUX__], [], [Define if OS is Linux])
		;;
	linux*:s390*)
		nss_libdir="/lib64"
		pam_libdir="/lib64/security"
		NSS_SUBDIR="linux"
                ENABLE_NSS_ENUM_DEFAULT="no"
		AC_DEFINE([__LWI_LINUX__], [], [Define if OS is Linux])
		;;
	solaris*:i?86|solaris*:sparc*)
		nss_libdir="/usr/lib"
		pam_libdir="/usr/lib/security"
		NSS_SUBDIR="solaris"
                ENABLE_NSS_ENUM_DEFAULT="no"
		AC_DEFINE([__LWI_SOLARIS__], [], [Define if OS is Solaris])
	    AC_DEFINE([_XOPEN_SOURCE], [500], [Define to desired XOPEN compliance level])
		;;
	darwin*:*)
		nss_libdir="/usr/lib"
		pam_libdir="/usr/lib/pam"
                NSS_SUBDIR="mac"
                ENABLE_NSS_ENUM_DEFAULT="yes"
                CF_FRAMEWORK_LDFLAGS="-framework CoreFoundation"
                SC_FRAMEWORK_LDFLAGS="-framework SystemConfiguration"
		# MACCLIENT_DIR="macclient"
		AC_DEFINE([__LWI_DARWIN__], [], [Define if OS is Darwin])
		;;
	freebsd*:*)
		nss_libdir="/usr/local/lib"
		pam_libdir="/usr/local/lib"
		NSS_SUBDIR="freebsd"
                ENABLE_NSS_ENUM_DEFAULT="no"
		AC_DEFINE([__LWI_FREEBSD__], [], [Define if OS is FreeBSD])
		;;
	hpux*:hppa*)
		nss_libdir="/usr/lib"
		pam_libdir="/usr/lib/security"
		NSS_SUBDIR="hpux"
                ENABLE_NSS_ENUM_DEFAULT="no"
		NSS_SHR_EXT=""
		MOD_EXT=".sl"
		AC_SUBST(NSS_SHR_EXT)
		AC_DEFINE([__LWI_HP_UX__], [], [Define if OS is HP-UX])
        AC_DEFINE([_XOPEN_SOURCE_EXTENDED], [1], [Define on HP-UX])
		;;
	hpux*:ia64*)
		nss_libdir="/usr/lib"
		pam_libdir="/usr/lib/security"
		NSS_SUBDIR="hpux"
                ENABLE_NSS_ENUM_DEFAULT="no"
		NSS_SHR_EXT=".so"
		AC_SUBST(NSS_SHR_EXT)
		AC_DEFINE([__LWI_HP_UX__], [], [Define if OS is HP-UX])
        AC_DEFINE([_XOPEN_SOURCE_EXTENDED], [1], [Define on HP-UX])
		;;
	aix*:*)
		nss_libdir="/usr/lib"
		pam_libdir="/usr/lib/security"
		NSS_SUBDIR="aix"
                ENABLE_NSS_ENUM_DEFAULT="no"
		NSS_SHR_EXT=""
		AC_SUBST(NSS_SHR_EXT)
		AC_DEFINE([__LWI_AIX__], [], [Define if OS is AIX])
                AC_DEFINE([_LINUX_SOURCE_COMPAT], [], [Enable Linux source compatibility on AIX])
		;;
esac

AC_SUBST(NSS_SUBDIR)
AC_SUBST(MACCLIENT_DIR)
AC_SUBST(MOD_EXT)
AC_SUBST(CF_FRAMEWORK_LDFLAGS)
AC_SUBST(SC_FRAMEWORK_LDFLAGS)
AC_SUBST(ENABLE_NSS_ENUM_DEFAULT)

AC_DEFINE_UNQUOTED([MOD_EXT], ["$MOD_EXT"], [Extension of shared modules])
AC_DEFINE_UNQUOTED([ENABLE_NSS_ENUM_DEFAULT], ["$ENABLE_NSS_ENUM_DEFAULT"], [Default value for nss enumeration option])

# Package version

AC_ARG_WITH([version],
        [AC_HELP_STRING([--with-version=<pkg-version>], [package version <major>.<minor>.<build>])],
        [
		PKG_VERSION="$withval"
        ])
AC_DEFINE_UNQUOTED(PKG_VERSION, "$PKG_VERSION", [Package Version])

# NSS and PAM

AC_ARG_WITH([nss-libdir],
        [AC_HELP_STRING([--with-nss-libdir=<dir>], [install nss modules into <dir>])],
        [
		nss_libdir="$withval"
        ])

AC_ARG_WITH([pam-libdir],
        [AC_HELP_STRING([--with-pam-libdir=<dir>], [install pam modules into <dir>])],
        [
		pam_libdir="$withval"
        ])

# krb5

AC_ARG_WITH([krb5],
        [AC_HELP_STRING([--with-krb5=<dir>], [use krb5 located in prefix <dir>])],
        [
		KRB5_INCLUDES="-I$withval/include"
                KRB5_LDFLAGS="-L$withval/lib"
        ])

AC_ARG_WITH([krb5-includes],
        [AC_HELP_STRING([--with-krb5-includes=<dir>], [use krb5 includes located in <dir>])],
        [
		KRB5_INCLUDES="-I$withval"
        ])

AC_ARG_WITH([krb5-libs],
        [AC_HELP_STRING([--with-krb5-libs=<dir>], [use krb5 libs located in <dir>])],
        [
		KRB5_LDFLAGS="-L$withval"
        ])

KRB5_LIBS="-lgssapi_krb5 -lkrb5 -lk5crypto"

AC_SUBST(KRB5_INCLUDES)
AC_SUBST(KRB5_LDFLAGS)
AC_SUBST(KRB5_LIBS)

# openldap

AC_ARG_WITH([openldap],
        [AC_HELP_STRING([--with-openldap=<dir>], [use openldap located in prefix <dir>])],
        [
		OPENLDAP_INCLUDES="-I$withval/include"
                OPENLDAP_LDFLAGS="-L$withval/lib"
        ])

AC_ARG_WITH([openldap-includes],
        [AC_HELP_STRING([--with-openldap-includes=<dir>], [use openldap includes located in <dir>])],
        [
		OPENLDAP_INCLUDES="-I$withval"
        ])

AC_ARG_WITH([openldap-libs],
        [AC_HELP_STRING([--with-openldap-libs=<dir>], [use openldap libs located in <dir>])],
        [
		OPENLDAP_LDFLAGS="-L$withval"
        ])

OPENLDAP_LIBS="-lldap_r -llber"

AC_SUBST(OPENLDAP_INCLUDES)
AC_SUBST(OPENLDAP_LDFLAGS)
AC_SUBST(OPENLDAP_LIBS)

# netapi

AC_ARG_WITH([netapi],
        [AC_HELP_STRING([--with-netapi=<dir>], [use netapi located in prefix <dir>])],
        [
		NETAPI_INCLUDES="-I$withval/include"
                NETAPI_LDFLAGS="-L$withval/lib"
        ])

AC_ARG_WITH([netapi-includes],
        [AC_HELP_STRING([--with-netapi-includes=<dir>], [use netapi includes located in <dir>])],
        [
		NETAPI_INCLUDES="-I$withval"
        ])

AC_ARG_WITH([netapi-libs],
        [AC_HELP_STRING([--with-netapi-libs=<dir>], [use netapi libs located in <dir>])],
        [
		NETAPI_LDFLAGS="-L$withval"
        ])

NETAPI_LIBS="-lnetapi -lnetlogon"

KRB5PAC_INCLUDES="$NETAPI_INCLUDES"
KRB5PAC_LDFLAGS="$NETAPI_LDFLAGS"
KRB5PAC_LIBS="-lkrb5pac"


AC_SUBST(NETAPI_INCLUDES)
AC_SUBST(NETAPI_LDFLAGS)
AC_SUBST(NETAPI_LIBS)

AC_SUBST(KRB5PAC_INCLUDES)
AC_SUBST(KRB5PAC_LDFLAGS)
AC_SUBST(KRB5PAC_LIBS)

# libunistr

AC_ARG_WITH([libunistr],
        [AC_HELP_STRING([--with-libunistr=<dir>], [use libunistr located in prefix <dir>])],
        [
		LIBUNISTR_INCLUDES="-I$withval/include"
                LIBUNISTR_LDFLAGS="-L$withval/lib"
        ])

AC_ARG_WITH([libunistr-includes],
        [AC_HELP_STRING([--with-libunistr-includes=<dir>], [use libunistr includes located in <dir>])],
        [
		LIBUNISTR_INCLUDES="-I$withval"
        ])

AC_ARG_WITH([libunistr-libs],
        [AC_HELP_STRING([--with-libunistr-libs=<dir>], [use libunistr libs located in <dir>])],
        [
		LIBUNISTR_LDFLAGS="-L$withval"
        ])

LIBUNISTR_LIBS="-lunistr"

AC_SUBST(LIBUNISTR_INCLUDES)
AC_SUBST(LIBUNISTR_LDFLAGS)
AC_SUBST(LIBUNISTR_LIBS)

# lwmsg

AC_ARG_WITH([lwmsg],
        [AC_HELP_STRING([--with-lwmsg=<dir>], [use lwmsg located in prefix <dir>])],
        [
                LWMSG_INCLUDES="-I$withval/include"
                LWMSG_LDFLAGS="-L$withval/lib"
        ])

AC_ARG_WITH([lwmsg-includes],
        [AC_HELP_STRING([--with-lwmsg-includes=<dir>], [use lwmsg includes located in <dir>])],
        [
                LWMSG_INCLUDES="-I$withval"
        ])

AC_ARG_WITH([lwmsg-libs],
        [AC_HELP_STRING([--with-lwmsg-libs=<dir>], [use lwmsg libs located in <dir>])],
        [
                LWMSG_LDFLAGS="-L$withval"
        ])

# crypto

AC_ARG_WITH([crypto],
        [AC_HELP_STRING([--with-crypto=<dir>], [use crypto located in prefix <dir>])],
        [
		CRYPTO_INCLUDES="-I$withval/include"
        CRYPTO_LDFLAGS="-L$withval/lib"
        ])

AC_ARG_WITH([crypto-includes],
        [AC_HELP_STRING([--with-crypto-includes=<dir>], [use crypto includes located in <dir>])],
        [
		CRYPTO_INCLUDES="-I$withval"
        ])

AC_ARG_WITH([crypto-libs],
        [AC_HELP_STRING([--with-crypto-libs=<dir>], [use crypto libs located in <dir>])],
        [
		CRYPTO_LDFLAGS="-L$withval"
        ])

CRYPTO_LIBS="-lcrypto"

AC_SUBST(CRYPTO_INCLUDES)
AC_SUBST(CRYPTO_LDFLAGS)
AC_SUBST(CRYPTO_LIBS)

# sqlite

AC_ARG_WITH([sqlite],
        [AC_HELP_STRING([--with-sqlite=<dir>], [use sqlite located in prefix <dir>])],
        [
		SQLITE_INCLUDES="-I$withval/include"
                SQLITE_LDFLAGS="-L$withval/lib"
        ])

AC_ARG_WITH([sqlite-includes],
        [AC_HELP_STRING([--with-sqlite-includes=<dir>], [use sqlite includes located in <dir>])],
        [
		SQLITE_INCLUDES="-I$withval"
        ])

AC_ARG_WITH([sqlite-libs],
        [AC_HELP_STRING([--with-sqlite-libs=<dir>], [use sqlite libs located in <dir>])],
        [
		SQLITE_LDFLAGS="-L$withval"
        ])

SQLITE_LIBS="-lsqlite3"

AC_SUBST(SQLITE_INCLUDES)
AC_SUBST(SQLITE_LDFLAGS)
AC_SUBST(SQLITE_LIBS)

# netlogon

AC_ARG_WITH([netlogon],
        [AC_HELP_STRING([--with-netlogon=<dir>], [use netlogon located in prefix <dir>])],
        [
		NETLOGON_INCLUDES="-I$withval/include"
                NETLOGON_LDFLAGS="-L$withval/lib"
        ])

AC_ARG_WITH([netlogon-includes],
        [AC_HELP_STRING([--with-netlogon-includes=<dir>], [use netlogon includes located in <dir>])],
        [
		NETLOGON_INCLUDES="-I$withval"
        ])

AC_ARG_WITH([netlogon-libs],
        [AC_HELP_STRING([--with-netlogon-libs=<dir>], [use netlogon libs located in <dir>])],
        [
		NETLOGON_LDFLAGS="-L$withval"
        ])

NETLOGON_LIBS="-llwnetclientapi"

AC_SUBST(NETLOGON_INCLUDES)
AC_SUBST(NETLOGON_LDFLAGS)
AC_SUBST(NETLOGON_LIBS)

# lwio

AC_ARG_WITH([lwio],
        [AC_HELP_STRING([--with-lwio=<dir>], [use lwio located in prefix <dir>])],
        [
                LWIO_INCLUDES="-I$withval/include"
        LWIO_LDFLAGS="-L$withval/lib"
        ])

AC_ARG_WITH([lwio-includes],
        [AC_HELP_STRING([--with-lwio-includes=<dir>], [use lwio includes located in <dir>])],
        [
                LWIO_INCLUDES="-I$withval"
        ])

AC_ARG_WITH([lwio-libs],
        [AC_HELP_STRING([--with-lwio-libs=<dir>], [use lwio libs located in <dir>])],
        [
                LWIO_LDFLAGS="-L$withval"
        ])

LWIO_LIBS="-llwioclient"

AC_SUBST(LWIO_INCLUDES)
AC_SUBST(LWIO_LDFLAGS)
AC_SUBST(LWIO_LIBS)

# pstore

AC_ARG_WITH([pstore],
        [AC_HELP_STRING([--with-pstore=<dir>], [use pstore located in prefix <dir>])],
        [
		PSTORE_INCLUDES="-I$withval/include"
                PSTORE_LDFLAGS="-L$withval/lib"
        ])

AC_ARG_WITH([pstore-includes],
        [AC_HELP_STRING([--with-pstore-includes=<dir>], [use pstore includes located in <dir>])],
        [
		PSTORE_INCLUDES="-I$withval"
        ])

AC_ARG_WITH([pstore-libs],
        [AC_HELP_STRING([--with-pstore-libs=<dir>], [use pstore libs located in <dir>])],
        [
		PSTORE_LDFLAGS="-L$withval"
        ])

PSTORE_LIBS="-llwpsapi"

AC_SUBST(PSTORE_INCLUDES)
AC_SUBST(PSTORE_LDFLAGS)
AC_SUBST(PSTORE_LIBS)

# eventlog

AC_ARG_WITH([eventlog],
        [AC_HELP_STRING([--with-eventlog=<dir>], [use eventlog located in prefix <dir>])],
        [
		EVENTLOG_INCLUDES="-I$withval/include"
        EVENTLOG_LDFLAGS="-L$withval/lib"
        ])

AC_ARG_WITH([eventlog-includes],
        [AC_HELP_STRING([--with-eventlog-includes=<dir>], [use eventlog includes located in <dir>])],
        [
		EVENTLOG_INCLUDES="-I$withval"
        ])

AC_ARG_WITH([eventlog-libs],
        [AC_HELP_STRING([--with-eventlog-libs=<dir>], [use eventlog libs located in <dir>])],
        [
		EVENTLOG_LDFLAGS="-L$withval"
        ])

EVENTLOG_LIBS="-leventlog"

AC_SUBST(EVENTLOG_INCLUDES)
AC_SUBST(EVENTLOG_LDFLAGS)
AC_SUBST(EVENTLOG_LIBS)

# dcerpc

AC_ARG_WITH([dcerpc],
        [AC_HELP_STRING([--with-dcerpc=<dir>], [use dcerpc located in prefix <dir>])],
        [
		DCERPC_INCLUDES="-I$withval/include"
                DCERPC_LDFLAGS="-L$withval/lib"
                DCERPC_PATH="$withval/bin"
        ])

AC_ARG_WITH([dcerpc-includes],
        [AC_HELP_STRING([--with-dcerpc-includes=<dir>], [use dcerpc includes located in <dir>])],
        [
		DCERPC_INCLUDES="-I$withval"
        ])

AC_ARG_WITH([dcerpc-libs],
        [AC_HELP_STRING([--with-dcerpc-libs=<dir>], [use dcerpc libs located in <dir>])],
        [
		DCERPC_LDFLAGS="-L$withval"
        ])

DCERPC_LIBS="-ldcerpc"

AC_SUBST(DCERPC_INCLUDES)
AC_SUBST(DCERPC_LDFLAGS)
AC_SUBST(DCERPC_LIBS)

# secdesc

AC_ARG_WITH([libsecdesc],
        [AC_HELP_STRING([--with-libsecdesc=<dir>], [use libsecdesc located in prefix <dir>])],
        [
		LIBSECDESC_INCLUDES="-I$withval/include"
                LIBSECDESC_LDFLAGS="-L$withval/lib"
                LIBSECDESC_PATH="$withval/bin"
        ])

AC_ARG_WITH([libsecdesc-includes],
        [AC_HELP_STRING([--with-libsecdesc-includes=<dir>], [use libsecdesc includes located in <dir>])],
        [
		LIBSECDESC_INCLUDES="-I$withval"
        ])

AC_ARG_WITH([libsecdesc-libs],
        [AC_HELP_STRING([--with-libsecdesc-libs=<dir>], [use libsecdesc libs located in <dir>])],
        [
		LIBSECDESC_LDFLAGS="-L$withval"
        ])

LIBSECDESC_LIBS="-lsecdesc"

AC_SUBST(LIBSECDESC_INCLUDES)
AC_SUBST(LIBSECDESC_LDFLAGS)
AC_SUBST(LIBSECDESC_LIBS)


# compat

ENABLE_COMPAT=false

AC_ARG_ENABLE([compat],
        [AC_HELP_STRING([--enable-compat], [enable compat-only build (default: disabled)])],
        [
                if test x"$enableval" = x"yes"
                then
			ENABLE_COMPAT=true
		else
			ENABLE_COMPAT=false
                fi
        ])

AM_CONDITIONAL(ENABLE_COMPAT, [$ENABLE_COMPAT])

# gss ntlm test provider

AC_ARG_ENABLE([testgssprovider],
        [AC_HELP_STRING([--enable-testgssprovider], [enable GSSNTLM test provider (default: disabled)])],
        [
                if test x"$enableval" = x"yes"
                then
		        	ENABLE_TESTGSSPROVIDER=true
		        	AC_DEFINE(ENABLE_TESTGSSPROVIDER, 1, [Define if the test gss provider must be included in runtime])
		        else
		        	ENABLE_TESTGSSPROVIDER=false
                fi
        ])

AM_CONDITIONAL(ENABLE_TESTGSSPROVIDER, [$ENABLE_TESTGSSPROVIDER])

# debugging

AC_ARG_ENABLE([debug],
        [AC_HELP_STRING([--enable-debug], [enable debugging (default: disabled)])],
        [
                if test x"$enableval" = x"yes"
                then
			AM_CFLAGS="$AM_CFLAGS -g -O0"
			AM_CPPFLAGS="$AM_CPPFLAGS -DDEBUG"			
                fi
        ])

CPPFLAGS="$CPPFLAGS -D_REENTRANT"

AM_CPPFLAGS="$AM_CPPFLAGS -I${top_srcdir}/include"
AM_CFLAGS="$AM_CFLAGS -Wall -Werror -fno-strict-aliasing"

AC_SUBST(AM_CPPFLAGS)
AC_SUBST(AM_CFLAGS)

lsassconfdir="$sysconfdir"
AC_SUBST(lsassconfdir)
AS_AC_EXPAND(CONFIGDIR, $lsassconfdir)
AC_DEFINE_UNQUOTED(CONFIGDIR, "$CONFIGDIR", [Config directory])

lsasscachedir="$localstatedir/lib/likewise"
AC_SUBST(lsasscachedir)
AS_AC_EXPAND(CACHEDIR, $lsasscachedir)
AC_DEFINE_UNQUOTED(CACHEDIR, "$CACHEDIR", [Cache directory])

AS_AC_EXPAND(providerdir, $libdir)

testbindir='$(exec_prefix)/test'
AC_SUBST(testbindir)

testlibdir='$(exec_prefix)/test'
AC_SUBST(testlibdir)

AS_AC_EXPAND(PREFIXDIR, $prefix)
AC_DEFINE_UNQUOTED(PREFIXDIR, "$PREFIXDIR", [Prefix directory])

AS_AC_EXPAND(LIBDIR, $libdir)
AC_DEFINE_UNQUOTED(LIBDIR, "$LIBDIR", [Library directory])

AS_AC_EXPAND(pamlibdir, $pam_libdir)
AC_DEFINE_UNQUOTED(PAM_LIBDIR, "$pamlibdir", [PAM library directory])

AS_AC_EXPAND(nsslibdir, $nss_libdir)
AC_DEFINE_UNQUOTED(NSS_LIBDIR, "$nsslibdir", [NSS library directory])

AC_C_BIGENDIAN

AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LIBTOOL
AC_PROG_MKDIR_P

AC_CHECK_PROG([DOXYGEN], [doxygen], [doxygen], [false])
if test x"$DOXYGEN" != x"false"
then
	HAVE_DOXYGEN=true
else
	HAVE_DOXYGEN=false
fi

AM_CONDITIONAL([HAVE_DOXYGEN], [$HAVE_DOXYGEN])

AC_CHECK_LIB([nsl], [gethostname], [NSL_LIBS="-lnsl"])
AC_CHECK_LIB([dl], [dlopen], [DL_LIBS="-ldl"])
AC_CHECK_LIB([resolv], [res_query], [RESOLV_LIBS="-lresolv"])
AC_CHECK_LIB([resolv], [__res_query], [RESOLV_LIBS="-lresolv"])
AC_CHECK_LIB([pthread], [pthread_self], [PTHREAD_LIBS="-lpthread"])
AC_CHECK_LIB([rt], [clock_settime], [RT_LIBS="-lrt"])
AC_CHECK_LIB([uuid], [uuid_copy], [UUID_LIBS="-luuid"])
AC_CHECK_LIB([socket], [bind], [SOCKET_LIBS="-lsocket"])
AC_CHECK_LIB([kvm], [kvm_open], [KVM_LIBS="-lkvm"])
AC_CHECK_LIB([proc], [openproc], [PROC_LIBS="-lproc"])

AC_CHECK_LIB([unistr], [mbstowc16s], [LIBUNISTR_LIBS="-lunistr"], [], [$LIBUNISTR_LDFLAGS])
AC_CHECK_LIB([crypto], [DES_set_key], [CRYPTO_LIBS="-lcrypto"], [], [$CRYPTO_LDFLAGS])
AC_CHECK_LIB([pam], [pam_start], [PAM_LIBS="-lpam"])

AC_SUBST(NSL_LIBS)
AC_SUBST(DL_LIBS)
AC_SUBST(RESOLV_LIBS)
AC_SUBST(PTHREAD_LIBS)
AC_SUBST(RT_LIBS)
AC_SUBST(UUID_LIBS)
AC_SUBST(SOCKET_LIBS)
AC_SUBST(PAM_LIBS)
AC_SUBST(KVM_LIBS)
AC_SUBST(PROC_LIBS)

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([inttypes.h arpa/inet.h fcntl.h limits.h netdb.h netinet/in.h stdint.h stdlib.h stdbool.h string.h strings.h sys/socket.h syslog.h unistd.h sys/types.h iconv.h sys/stat.h sys/pstat.h proc/readproc.h procfs.h sys/procfs.h kvm.h time.h sys/time.h sys/varargs.h nss.h nss_common.h nsswitch.h synch.h pthread.h wc16str.h wc16printf.h sys/param.h sys/sysctl.h sys/user.h pwd.h stdio.h grp.h sys/wait.h])

AC_CHECK_HEADERS([security/pam_appl.h], ,
    [AC_CHECK_HEADERS([pam/pam_appl.h], ,
        [AC_MSG_ERROR([No PAM header files found])])])

AC_PATH_PROG([IDL], [dceidl], [no], [$PATH:$DCERPC_PATH])

if test x"$IDL" = x"no"; then
    AC_MSG_ERROR([DCERPC IDL compiler not found])
fi

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_PID_T
AC_HEADER_TIME
AC_STRUCT_TM

# Check for basic types
AC_CHECK_TYPES([int8, int16, int32, int64], [], [],
[#include <sys/types.h>
 #if __ia64
 #include <model.h>
 #endif])
AC_CHECK_TYPES([uint8, uint16, uint32, uint64])

AC_CHECK_TYPE(suseconds_t, [USEC_T="suseconds_t"], [USEC_T="long int"], [#include <sys/time.h>])
AC_DEFINE_UNQUOTED([USEC_T], [$USEC_T], [Type of tv_usec field of struct timeval])

AC_CHECK_SIZEOF([long long int])
AC_CHECK_SIZEOF([long int])

# Checks for library functions.
AC_FUNC_FORK
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_FUNC_SELECT_ARGTYPES
AC_TYPE_SIGNAL
AC_FUNC_STRFTIME
AC_FUNC_VPRINTF
AC_FUNC_STRERROR_R
old_LDFLAGS="$LDFLAGS"
LDFLAGS="$LDFLAGS $RT_LIBS"
AC_CHECK_FUNCS([atexit localtime_r memset select socket strchr strerror strerror_r vsyslog rpl_realloc rpl_malloc clock_gettime clock_settime settimeofday gettimeofday timegm getgrouplist strtoll __strtoll strtoull __strtoull strtol strtoul])
LDFLAGS="$old_LDFLAGS"
AC_CHECK_DECLS([isblank], [], [], [#include <ctype.h>])
AC_CHECK_TYPES([wchar16_t], [], [], [AC_INCLUDES_DEFAULT
#ifdef HAVE_WC16STR_H
# include <wc16str.h>
#endif
])

AC_CHECK_HEADER([lwmsg/lwmsg.h],,[AC_MSG_ERROR([Could not find lwmsg headers])])
AC_CHECK_LIB([lwmsg_nothr], [lwmsg_assoc_send], [LWMSG_NOTHR_LIBS="-llwmsg_nothr"], [AC_MSG_ERROR([Could not find liblwmsg_nothr])], [$LWMSG_LDFLAGS])
AC_CHECK_LIB([lwmsg], [lwmsg_server_start], [LWMSG_LIBS="-llwmsg"], [AC_MSG_ERROR([Could not find liblwmsg])], [$LWMSG_LDFLAGS])

AC_SUBST(LWMSG_INCLUDES)
AC_SUBST(LWMSG_LDFLAGS)
AC_SUBST(LWMSG_NOTHR_LIBS)
AC_SUBST(LWMSG_LIBS)


AC_CHECK_TYPES([socklen_t], [], [], [AC_INCLUDES_DEFAULT
#include <sys/types.h>
#include <sys/socket.h>
])

AC_CHECK_TYPES([struct pam_repository], [], [], [AC_INCLUDES_DEFAULT
#include <security/pam_appl.h>
])

AC_CHECK_DECLS([kvm_open, kvm_getprocs], [], [], [
#if HAVE_FCNTL_H
#include <fcntl.h>
#endif
#if HAVE_KVM_H
#include <kvm.h>
#endif
#if HAVE_SYS_PARAM_H
#include <sys/param.h>
#endif
#if HAVE_SYS_SYSCTL_H
#include <sys/sysctl.h>
#endif
#if HAVE_SYS_USER_H
#include <sys/user.h>
#endif])

AC_CHECK_DECLS([isblank, pstat_getproc, KERN_PROC_PATHNAME], [], [], [
#include <ctype.h>
#if HAVE_SYS_PARAM_H
#include <sys/param.h>
#endif
#if HAVE_SYS_SYSCTL_H
#include <sys/sysctl.h>
#endif
#if HAVE_SYS_PSTAT_H
#include <sys/pstat.h>
#endif])

AC_CHECK_TYPES([struct psinfo], , , [
#if HAVE_PROCFS_H
#include <procfs.h>
#elif HAVE_SYS_PROCFS_H
#include <sys/procfs.h>
#endif
])

if test "$ac_cv_have_decl_pstat_getproc" = yes; then
AM_CPPFLAGS="$AM_CPPFLAGS -D_PSTAT64"
fi

saved_CFLAGS="$CFLAGS"
CFLAGS="$CFLAGS -Wall -Werror"

AC_MSG_CHECKING([if getsockname takes socklen_t*])
AC_TRY_COMPILE([
#include <sys/types.h> 
#include <sys/socket.h>
],
[
int fd = -1;
struct sockaddr addr;
socklen_t addrlen;
(void) getsockname(fd, &addr, &addrlen);
], [
AC_MSG_RESULT([yes])
AC_DEFINE([GETSOCKNAME_TAKES_SOCKLEN_T], [], [Define if getsockname takes socklen_t as its third argument])],[
AC_MSG_RESULT([no])
])

AC_MSG_CHECKING([if struct msghdr has msg_control])
AC_TRY_COMPILE([
#include <sys/types.h>
#include <sys/socket.h>
],
[
struct msghdr hdr;
hdr.msg_control = 0;
],
[
AC_MSG_RESULT([yes])
AC_DEFINE([MSGHDR_HAS_MSG_CONTROL], [], [Define if struct msghdr has the msg_control field])
],
[
AC_MSG_RESULT([no])
])

CFLAGS="$saved_CFLAGS"

AC_CONFIG_FILES([Makefile
                 utils/Makefile
                 logging_r/Makefile
                 lsaunistr/Makefile
                 ipc/Makefile
                 client/Makefile
                 provider/Makefile
                 provider/ad-provider/Makefile
                 provider/ad-provider/ipc/Makefile
                 provider/ad-provider/client/Makefile
                 macclient/Makefile
		 nsswitch/Makefile
		 nsswitch/common/Makefile
		 nsswitch/linux/Makefile
		 nsswitch/freebsd/Makefile
		 nsswitch/aix/Makefile
		 nsswitch/hpux/Makefile
		 nsswitch/solaris/Makefile
		 nsswitch/mac/Makefile
		 gssntlm/Makefile
                 gssntlm/client/Makefile
		 gssntlm/common/Makefile
		 gssntlm/server/Makefile
		 gssntlm/test/Makefile
		 gssntlm/test/serverapi/Makefile
		 gssntlm/test/gss/Makefile
		 gssntlm/include/Makefile
                 server/Makefile
                 server/krb5/Makefile
                 server/ldap/Makefile
                 server/srvutils/Makefile
                 server/api/Makefile
                 server/join/Makefile
                 server/auth-providers/Makefile
                 server/auth-providers/ad-provider/Makefile
                 server/auth-providers/local-provider/Makefile
                 server/ipc/Makefile
                 server/lsassd/Makefile
                 server/db/Makefile
                 server/sqlite/Makefile
		 server/rpc/Makefile
		 server/rpc/lsa/Makefile
                 access/Makefile
                 auth/Makefile
                 auth/common/Makefile
                 auth/pam/Makefile
                 wbclient/Makefile
                 lwicompat/Makefile
                 tools/Makefile
                 tools/add_user/Makefile
		 tools/mod_user/Makefile
                 tools/del_user/Makefile
                 tools/add_group/Makefile
                 tools/del_group/Makefile
                 tools/enum_groups/Makefile
                 tools/lw-ypcat/Makefile
                 tools/lw-ypmatch/Makefile
                 tools/enum_users/Makefile
                 tools/find_group_by_id/Makefile
                 tools/find_group_by_name/Makefile
                 tools/find_user_by_id/Makefile
                 tools/find_user_by_name/Makefile
                 tools/find_by_sid/Makefile
                 tools/list_groups_for_user/Makefile
                 tools/migrator/Makefile
                 tools/get_log_info/Makefile
                 tools/set_log_level/Makefile
                 tools/get_metrics/Makefile
                 tools/get_status/Makefile
                 tools/refresh_configuration/Makefile
                 tools/trace_info/Makefile
                 tools/ad_cache/Makefile
		 etc/Makefile
		 etc/lsassd.conf
                 include/Makefile
                 tests/Makefile
		 tests/lsaclient/Makefile
		 tests/test_getgrgid/Makefile
		 tests/test_getpwuid/Makefile
		 tests/test_LsaGetNamesBySidList/Makefile
		 tests/test_getgrnam/Makefile
		 tests/test_LsaAllocSecurityIdentifierFromBinary/Makefile
		 tests/test_LsaGetSecurityIdentifierHashedRid/Makefile
		 tests/test_LsaAllocSecurityIdentifierFromString/Makefile
		 tests/test_LsaParseConfigFile/Makefile
		 tests/test_getpwent/Makefile
		 tests/test_getpwnam/Makefile
                 tests/test_stress_ad_provider/Makefile
                 tests/test_bitvector/Makefile
                 tests/test_memcache/Makefile
                 tests/test_perf/Makefile
                 tests/test_perf/lsassonly/Makefile
                 tests/test_authenticate/Makefile
                 tests/test_validate/Makefile
                 tests/test_changepasswd/Makefile
                 tests/test_session/Makefile
                 tests/test_checkuserinlist/Makefile
                 tests/test_openldap/Makefile
                 scripts/Makefile
		 docs/Makefile
		 docs/Doxyfile])

AC_OUTPUT
